@@ -1,6 +1,5 @@
 package fr.samlegamer.mcwbiomesoplenty;
 
-import java.util.Arrays;
 import java.util.List;
 import fr.samlegamer.addonslib.client.ColorRegistry;
 import net.neoforged.api.distmarker.Dist;
@@ -11,7 +10,7 @@ import net.neoforged.neoforge.client.event.RegisterColorHandlersEvent;
 @EventBusSubscriber(modid = McwBOP.MODID, bus = EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
 public class Client
 {
-	private static final List<String> LEAVES_NO_COLORED = Arrays.asList("pine", "mahogany", "willow", "palm", "flowering_oak");
+	private static final List<String> LEAVES_NO_COLORED = List.of("pine", "mahogany", "willow", "palm", "flowering_oak");
 	private static final ColorRegistry COLOR = new ColorRegistry(McwBOP.MODID, LEAVES_NO_COLORED);
 
 	@SubscribeEvent
